Created archieve types, changed css, added gifs, added posts, changed README and desc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
   <body a="{{ site.theme_config.appearance | default: "auto" }}">
     <main class="page-content" aria-label="Content">
       <div class="w">
+
+        <!-- For every page -->
+        <img src="../assets/pictures/beyond-the-boundry.gif" alt="beyond-the-boundry" width="400" style="display: block; margin: 0 auto;">
+
         {{ content }}
       </div>
     </main>
