--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 <header>
+  <!-- Can put a different picture just on main page -->
+  <!-- <img src="../assets/pictures/beyond-the-boundry.gif" alt="beyond-the-boundry" width="400" style="display: block; margin: 0 auto;"> -->
   <h1>{{ site.title }}</h1>
   {%-if site.theme_config.show_description-%}
     <p>{{ site.description }}</p>
